[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/fsm-node/editor/graph/FSMEditorGraph.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/fsm-node/editor/FSMEditor.gd" type="Script" id=2]
[ext_resource path="res://addons/fsm-node/editor/new_state/FSMEditorNewStateDialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/fsm-node/editor/new_transition/FSMEditorNewTransitionDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/fsm-node/editor/invalid_connection/FSMEditorInvalidConnectionDialog.tscn" type="PackedScene" id=5]

[node name="Editor" type="WindowDialog"]
margin_right = 1024.0
margin_bottom = 800.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 1
window_title = "FSM Graph Editor"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graph" parent="Panel" instance=ExtResource( 1 )]

[node name="AddStateButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -92.0
margin_top = 10.0
margin_right = -16.0
margin_bottom = 42.0
grow_horizontal = 0
text = "Add State"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddTransitionButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -220.0
margin_top = 10.0
margin_right = -112.0
margin_bottom = 42.0
grow_horizontal = 0
text = "Add Transition"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewStateDialog" parent="Panel" instance=ExtResource( 3 )]

[node name="NewTransitionDialog" parent="Panel" instance=ExtResource( 4 )]
visible = false

[node name="InvalidConnection" parent="Panel" instance=ExtResource( 5 )]
visible = false
[connection signal="about_to_show" from="." to="." method="_on_about_to_show"]
[connection signal="delete_node" from="Panel/Graph" to="." method="_on_Graph_delete_node"]
[connection signal="edit_state" from="Panel/Graph" to="." method="_on_Graph_edit_state"]
[connection signal="edit_transition" from="Panel/Graph" to="." method="_on_Graph_edit_transition"]
[connection signal="invalid_connection" from="Panel/Graph" to="." method="_on_Graph_invalid_connection"]
[connection signal="pressed" from="Panel/AddStateButton" to="." method="_on_AddStateButton_pressed"]
[connection signal="pressed" from="Panel/AddTransitionButton" to="." method="_on_AddTransitionButton_pressed"]
[connection signal="create_state" from="Panel/NewStateDialog" to="." method="_on_AcceptDialog_create_state"]
[connection signal="create_transition" from="Panel/NewTransitionDialog" to="." method="_on_NewTransitionDialog_create_transition"]
